image file types

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<input #hiddenInput type="file" (change)="loadFile($event)" style="display:none" accept="image/*">
+<input #hiddenInput type="file" (change)="loadFile($event)" style="display:none" accept="image/png, image/jpg, image/jpeg">
 
 <!--Loading Indicator-->
 <div style="width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.16); position: fixed; top: 0; left: 0; z-index: 100"
