--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
 </div>
 
 <!-- Confirming Modal -->
+<div *ngIf="modalShow">Test</div>
 <div class="modal" *ngIf="modalShow">
   <div class="modal-content">
     <h4>Do you want to add another image to the pdf?</h4>
