--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,7 +37,7 @@ $icon_size: 64px;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 100000;
+  // z-index: 100000;
 
   .modal-content {
     position: absolute;
