--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- header -->
 <mat-toolbar color="primary">
   <span>Document Scanner</span>
+<div *ngIf="modalShow">----Is this showing</div>
 </mat-toolbar>
 
 <!--Doc Scanner Component-->
@@ -39,7 +40,9 @@
 </div>
 
 <!-- Confirming Modal -->
-<div *ngIf="modalShow">Test</div>
+<div>
+  <div *ngIf="modalShow">Is this showing 2</div>
+</div>
 <div class="modal" *ngIf="modalShow">
   <div class="modal-content">
     <h4>Do you want to add another image to the pdf?</h4>
