--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,38 @@
 $primary: rgb(123, 31, 162);
 $primary_trans: rgba(123, 31, 162, 0.15);
 
+.show {
+  display: block !important;
+}
+
+.relative {
+  position: relative;
+  padding: 18px;
+  margin-top: 32px;
+  height: 80vh;
+}
+
+.imgAdded {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .dropZone {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: 2px dashed $primary;
   width: 600px;
   height: 300px;
   max-width: 100%;
   max-height: 50vh;
   transition: 0.5s all;
-  margin: auto;
   cursor: pointer;
   border-radius: 20px;
-  padding: 18px;
-  margin-top: 32px;
+  background-color: #fff;
 }
 
 .drop-hover {
@@ -38,10 +58,11 @@ $icon_size: 64px;
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
   // z-index: 100000;
+  display: none;
 
   .modal-content {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
